--- a/package.json
+++ b/package.json
@@ -22,6 +22,22 @@
   },
   "homepage": "https://github.com/tech-women/adacon#readme",
   "devDependencies": {
+    "lint-staged": "^10.0.8",
+    "prettier": "^1.19.1",
     "uncss": "^0.17.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "prettier --write",
+      "eslint --ext .js,.ts"
+    ],
+    "*.{md,json,yaml,yml}": [
+      "prettier --write"
+    ]
   }
 }
